# 202605-ai-study

./: .env.example  .gitignore  README.md  chroma_demo.py  chroma_qa_demo.py  chroma_simple_demo.py  pyproject.toml  requirements.txt
.trae/: skill-config.json
.trae/documents/: rag_document_splitter_plan.md  sentence_splitter_plan.md
.trae/rules/: project_rules.md
.trae/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
.trae/skills/deep-learning-assistant/: SKILL.md
.trae/skills/deep-learning-assistant-1/: README.md  SKILL.md
.trae/skills/deep-learning-assistant-2/: README.md  SKILL.md
.trae/skills/deep-learning-assistant-3/: SKILL.md
.trae/skills/deep-learning-assistant-original/: SKILL.md
.trae/skills/venv-activator/: SKILL.md
20260507-demo02-thinking-reflection-framework/: demo.py  memory_system.py  self_reflection.py  thinking_engine.py  thinking_memory.json  tutorial.md
20260508-demo/: hello_world.py
20260508-demo-rag-splitter/: demo.py
20260508-demo-rag-splitter/docs/: CODE_NAVIGATION_FIX.md
20260508-demo-rag-splitter/src/splitters/: __init__.py  character_splitter.py  token_splitter.py
construction_qa_system/: README.md  main.py  requirements.txt  test_system.py
construction_qa_system/models/: qa_engine.py  vector_db.py
construction_qa_system/utils/: data_preprocessor.py
docs/plans/: 2026-05-08-langchain-demo-design.md  2026-05-08-langchain-demo-implementation.md  2026-05-08-project-restructure.md  2026-05-09-langchain-demo-improved-design.md  2026-05-09-langchain-demo-improved-implementation.md
docs/superpowers/plans/: 2026-05-14-langchain-callbacks.md
simple_chroma_db/: chroma.sqlite3
(+79 files in other folders)
