[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-demos"
version = "1.0.0"
description = "AI学习演示项目集合"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "langchain>=0.1.10",
    "langchain-community>=0.0.25",
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.38.2",
    "torch>=2.2.1",
    "jieba>=0.42.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "20260508-demo-rag-splitter.src*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]
