[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-demos"
version = "1.0.0"
description = "AI学习演示项目集合"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
package-dir = {"": "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
