[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-study-demos"
version = "1.0.0"
description = "AI study demos collection"
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
